Wed Feb 12 02:07:49 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/configure.ac: Default enable AM_SILENT_RULES.

Wed Feb 12 01:21:00 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* common/GNUmakefile.am: Better AM_SILENT_RULES support.
	* libdwarf/GNUmakefile.am: Likewise.
	* libelf/GNUmakefile.am: Likewise.
	* libelftc/GNUmakefile.am: Likewise.

Wed Feb 12 00:24:00 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Wed Feb 12 00:18:52 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r2983

Mon Jan 27 22:40:41 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Mon Jan 27 22:37:09 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r2980

Sat Jan  4 02:10:32 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* README: Upstream svn URL got changed from
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk
	to https://svn.code.sf.net/p/elftoolchain/code/trunk.

Wed Jan  1 14:05:47 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/configure.ac (AM_PROG_AR): Make its use automake 1.11.1
	compatible.

Mon Dec 23 17:07:09 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Mon Dec 23 16:58:21 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	https://svn.code.sf.net/p/elftoolchain/code/trunk@r2974

Sun Dec 22 16:28:26 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libdwarf/libdwarf_frame.c (_dwarf_frame_convert_inst): Remove trivial
	dead variable assigment.
	* libelf/elf_update.c (_libelf_write_elf): Likewise.
	* libelf/libelf_ar.c (GET_WORD): Likewise.
	(_libelf_ar_process_svr4_symtab): Likewise.
	* libelftc/libelftc_dem_arm.c (read_func_ptr): Likewise.